--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,15 +1,20 @@
 {
-  "myFarm": "Moje farma",
+  "myFarm": "Moje Farma",
   "createFarm": "Založit farmu",
   "signOut": "Odhlásit se",
   "signIn": "Přihlásit se",
   "signUp": "Registrovat se",
-  "Email": "Email",
-  "Password": "Heslo",
+  "email": "Email",
+  "password": "Heslo",
   "firstName": "Jméno",
   "lastName": "Příjmení",
-  "Continue": "Pokračovat",
+  "continue": "Pokračovat",
   "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
+  "farmName": "Jméno Farmy",
+  "street": "Ulice",
+  "HN": "Č.P.",
+  "city": "Město",
+  "postcode": "PSČ",
   "landingPage": {
     "heading": "Ovoce a zelenina přímo od pěstitele",
     "showExampleFarm": "Zobraz Ukázku Farmy",
