--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,14 +1,19 @@
 {
-  "myFarm": "My farm",
+  "myFarm": "My Farm",
   "createFarm": "Create farm",
   "signOut": "Sign out",
   "signIn": "Sign in",
   "signUp": "Sign up",
-  "Email": "Email",
-  "Password": "Password",
+  "email": "Email",
+  "password": "Password",
   "firstName": "First name",
   "lastName": "Last name",
-  "Continue": "Pokračovat",
+  "continue": "Pokračovat",
+  "farmName": "Farm Name",
+  "street": "Street",
+  "HN": "HN",
+  "city": "City",
+  "postcode": "Postcode",
   "genericFailureMessage": "Something's wrong. Please try again later.",
   "landingPage": {
     "heading": "Fruits and vegetables from local farmers",
