extend Dialog API

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,26 +1,28 @@
 {
-  "myFarm": "Moje Farma",
+  "continue": "Pokračovat",
+  "city": "Město",
   "createFarm": "Založit farmu",
+  "dairy": "Mléčné výrobky",
+  "eggs": "Vejce",
+  "email": "Email",
+  "farmName": "Jméno Farmy",
+  "firstName": "Jméno",
+  "fruits": "Ovoce",
+  "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
+  "HN": "Č.P.",
+  "lastName": "Příjmení",
+  "meat": "Maso",
+  "myFarm": "Moje Farma",
+  "password": "Heslo",
+  "postcode": "PSČ",
+  "producing": "Produkujeme",
   "signOut": "Odhlásit se",
   "signIn": "Přihlásit se",
   "signUp": "Registrovat se",
-  "email": "Email",
-  "password": "Heslo",
-  "firstName": "Jméno",
-  "lastName": "Příjmení",
-  "continue": "Pokračovat",
-  "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
-  "farmName": "Jméno Farmy",
+  "somethingWentWrong": "Něco se porouchalo",
   "street": "Ulice",
-  "HN": "Č.P.",
-  "city": "Město",
-  "postcode": "PSČ",
+  "tryItLater": "Zkuste akci opakovat později.",
   "vegetables": "Zelenina",
-  "fruits": "Ovoce",
-  "dairy": "Mléčné výrobky",
-  "eggs": "Vejce",
-  "meat": "Maso",
-  "producing": "Produkujeme",
   "landingPage": {
     "heading": "Ovoce a zelenina přímo od pěstitele",
     "showExampleFarm": "Zobraz Ukázku Farmy",
