--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,26 +1,28 @@
 {
-  "myFarm": "My Farm",
-  "createFarm": "Create farm",
-  "signOut": "Sign out",
-  "signIn": "Sign in",
-  "signUp": "Sign up",
-  "email": "Email",
-  "password": "Password",
-  "firstName": "First name",
-  "lastName": "Last name",
-  "continue": "Pokračovat",
-  "farmName": "Farm Name",
-  "street": "Street",
-  "HN": "HN",
   "city": "City",
-  "postcode": "Postcode",
-  "vegetables": "Vegetables",
-  "fruits": "Fruits",
+  "continue": "Pokračovat",
+  "createFarm": "Create farm",
   "dairy": "Dairy",
   "eggs": "Eggs",
-  "meat": "Meat",
-  "producing": "Producing",
+  "email": "Email",
+  "farmName": "Farm Name",
+  "firstName": "First name",
+  "fruits": "Fruits",
   "genericFailureMessage": "Something's wrong. Please try again later.",
+  "HN": "HN",
+  "lastName": "Last name",
+  "meat": "Meat",
+  "myFarm": "My Farm",
+  "password": "Password",
+  "postcode": "Postcode",
+  "producing": "Producing",
+  "signIn": "Sign in",
+  "signOut": "Sign out",
+  "signUp": "Sign up",
+  "somethingWentWrong": "Something went wrong",
+  "street": "Street",
+  "tryItLater": "Try it again later.",
+  "vegetables": "Vegetables",
   "landingPage": {
     "heading": "Fruits and vegetables from local farmers",
     "showExampleFarm": "Show Example Farm",
