--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -44,6 +44,7 @@
     "existingAccount": "Už máte účet? Přihlašte se"
   },
   "farmForm": {
-    "makeFarmPublic": "Zveřejnit farmu"
+    "makeFarmPublic": "Zveřejnit farmu",
+    "isPickupPoint": "Odběry ze dvora"
   }
 }
