add accommodation page

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -52,6 +52,7 @@
   },
   "farmPage": {
     "farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
+    "accommodation": "Ubytování",
     "photoGallery": "Fotogalerie",
     "reviews": "Říkají o nás",
     "volunteers": "Dobrovolníci"
