update farm routes

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -54,6 +54,7 @@
     "farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
     "accommodation": "Ubytování",
     "photoGallery": "Fotogalerie",
+    "products": "Bedýnky",
     "reviews": "Říkají o nás",
     "volunteers": "Dobrovolníci"
   }
