--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,65 +1,59 @@
 {
+  "address": "Adresa",
   "boxes": "Bedýnky",
-  "continue": "Pokračovat",
   "city": "Město",
+  "contacts": "Kontakty",
+  "continue": "Pokračovat",
   "createFarm": "Založit farmu",
   "dairy": "Mléčné výrobky",
   "eggs": "Vejce",
   "email": "Email",
   "farm": "Farma",
+  "farmForm.isPickupPoint": "Odběry ze dvora",
+  "farmForm.makeFarmPublic": "Zveřejnit farmu",
+  "farmLandingPage.aboutFarm": "O Farmě",
   "farmName": "Jméno farmy",
+  "farmPage.accommodation": "Ubytování",
+  "farmPage.blog": "Blog",
+  "farmPage.csa": "KPZ - Bedýnky",
+  "farmPage.eshop": "Eshop",
+  "farmPage.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
+  "farmPage.photoGallery": "Fotogalerie",
+  "farmPage.reviews": "Říkají o nás",
+  "farmPage.switchToEditMode": "Editovat",
+  "farmPage.switchToViewMode": "Náhled", 
+  "farmPage.volunteers": "Dobrovolníci",
   "firstName": "Jméno",
   "fruits": "Ovoce",
   "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
+  "landingPage.heading": "Ovoce a zelenina přímo od pěstitele",
+  "landingPage.showExampleFarm": "Zobraz Ukázku Farmy",
+  "landingPage.subscribeToNewsletter": "Přidej se",
+  "landingPage.workInProgress": "Na stránce se pracuje",
+  "landingPage.workInProgress2": "budeme vás informovat co je nového.",
   "lastName": "Příjmení",
   "meat": "Maso",
   "myFarm": "Moje Farma",
   "password": "Heslo",
-  "pickupPoints": "Odběrová místa",
   "phoneNumber": "Telefonní číslo",
+  "pickupPoints": "Odběrová místa",
   "postcode": "PSČ",
   "producing": "Produkujeme",
-  "signOut": "Odhlásit se",
   "signIn": "Přihlásit se",
+  "signInPage.heading": "Přihlášení",
+  "landingPage.farmWebPage": "Otevřít webovou stránku farmy",
+  "signInPage.invalidCredentials": "Neplatné přihlašovací údaje.",
+  "signInPage.noAccount": "Nemáte účet? Registrujte se",
+  "signOut": "Odhlásit se",
   "signUp": "Registrovat se",
+  "signUpPage.emailInUse": "Email je již využíván. Zkuste se přihlásit.",
+  "signUpPage.existingAccount": "Už máte účet? Přihlašte se",
+  "signUpPage.heading": "Registrace",
+  "signUpPage.invalidEmail": "Neplatný email.",
+  "signUpPage.newsletterCheckbox": "Chci novinky od FarmedBy na email.",
   "somethingWentWrong": "Něco se porouchalo",
   "street": "Ulice",
   "tryItLater": "Zkuste akci opakovat později.",
   "vegetables": "Zelenina",
-  "webUrl": "Webová adresa",
-  "landingPage": {
-    "heading": "Ovoce a zelenina přímo od pěstitele",
-    "showExampleFarm": "Zobraz Ukázku Farmy",
-    "workInProgress": "Na stránce se pracuje",
-    "workInProgress2": "budeme vás informovat co je nového.",
-    "subscribeToNewsletter": "Přidej se"
-  },
-  "signInPage": {
-    "heading": "Přihlášení",
-    "invalidCredentials": "Neplatné přihlašovací údaje.",
-    "noAccount": "Nemáte účet? Registrujte se"
-  },
-  "signUpPage": {
-    "heading": "Registrace",
-    "invalidEmail": "Neplatný email.",
-    "emailInUse": "Email je již využíván. Zkuste se přihlásit.",
-    "newsletterCheckbox": "Chci novinky od FarmedBy na email.",
-    "existingAccount": "Už máte účet? Přihlašte se"
-  },
-  "farmForm": {
-    "makeFarmPublic": "Zveřejnit farmu",
-    "isPickupPoint": "Odběry ze dvora"
-  },
-  "farmPage": {
-    "accommodation": "Ubytování",
-    "blog": "Blog",
-    "csa": "KPZ - Bedýnky",
-    "eshop": "Eshop",
-    "switchToEditMode": "Editovat",
-    "switchToViewMode": "Náhled", 
-    "farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
-    "photoGallery": "Fotogalerie",
-    "reviews": "Říkají o nás",
-    "volunteers": "Dobrovolníci"
-  }
+  "webAddress": "Webová adresa"
 }
