--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,66 +1,60 @@
 {
+  "address": "Address",
   "boxes": "Boxes",
   "city": "City",
+  "contacts": "Contacts",
   "continue": "Pokračovat",
   "createFarm": "Create farm",
   "dairy": "Dairy",
   "eggs": "Eggs",
   "email": "Email",
   "farm": "Farm",
+  "farmForm.isPickupPoint": "Use farm as pickup point",
+  "farmForm.makeFarmPublic": "Make farm public",
+  "farmLandingPage.aboutFarm": "About Farm",
   "farmName": "Farm name",
+  "farmPage.accommodation": "Accommodation",
+  "farmPage.blog": "Blog",
+  "farmPage.csa": "CSA - Boxes",
+  "farmPage.eshop": "Eshop",
+  "farmPage.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
+  "farmPage.photoGallery": "Photo gallery",
+  "farmPage.reviews": "They say about us",
+  "farmPage.switchToEditMode": "Edit",
+  "farmPage.switchToViewMode": "View", 
+  "farmPage.volunteers": "Volunteers",
   "firstName": "First name",
   "fruits": "Fruits",
   "genericFailureMessage": "Something's wrong. Please try again later.",
   "HN": "HN",
+  "landingPage.heading": "Fruits and vegetables from local farmers",
+  "landingPage.farmWebPage": "Open farm web page",
+  "landingPage.showExampleFarm": "Show Example Farm",
+  "landingPage.subscribeToNewsletter": "Subscribe",
+  "landingPage.workInProgress": "Site is under construction",
+  "landingPage.workInProgress2": "subscribe to be updated what's new.",
   "lastName": "Last name",
   "meat": "Meat",
   "myFarm": "My Farm",
   "password": "Password",
-  "pickupPoints": "Pickup points",
   "phoneNumber": "Phone number",
+  "pickupPoints": "Pickup points",
   "postcode": "Postcode",
   "producing": "Producing",
   "signIn": "Sign in",
+  "signInPage.heading": "Sign in",
+  "signInPage.invalidCredentials": "Invalid credentials.",
+  "signInPage.noAccount": "No account yet? Sign up",
   "signOut": "Sign out",
   "signUp": "Sign up",
+  "signUpPage.emailInUse": "Email address is taken. Sign in.",
+  "signUpPage.existingAccount": "Already have an account? Sign in",
+  "signUpPage.heading": "Sign up",
+  "signUpPage.invalidEmail": "Invalid email",
+  "signUpPage.newsletterCheckbox": "Subscribe to FarmedBy newsletter",
   "somethingWentWrong": "Something went wrong",
   "street": "Street",
   "tryItLater": "Try it again later.",
   "vegetables": "Vegetables",
-  "webUrl": "Web address",
-  "landingPage": {
-    "heading": "Fruits and vegetables from local farmers",
-    "showExampleFarm": "Show Example Farm",
-    "workInProgress": "Site is under construction",
-    "workInProgress2": "subscribe to be updated what's new.",
-    "subscribeToNewsletter": "Subscribe"
-  },
-  "signInPage": {
-    "heading": "Sign in",
-    "invalidCredentials": "Invalid credentials.",
-    "noAccount": "No account yet? Sign up"
-  },
-  "signUpPage": {
-    "heading": "Sign up",
-    "invalidEmail": "Invalid email",
-    "emailInUse": "Email address is taken. Sign in.",
-    "newsletterCheckbox": "Subscribe to FarmedBy newsletter",
-    "existingAccount": "Already have an account? Sign in"
-  },
-  "farmForm": {
-    "makeFarmPublic": "Make farm public",
-    "isPickupPoint": "Use farm as pickup point"
-  },
-  "farmPage": {
-    "accommodation": "Accommodation",
-    "blog": "Blog",
-    "csa": "CSA - Boxes",
-    "eshop": "Eshop",
-    "switchToEditMode": "Edit",
-    "switchToViewMode": "View", 
-    "farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
-    "photoGallery": "Photo gallery",
-    "reviews": "They say about us",
-    "volunteers": "Volunteers"
-  }
+  "webAddress": "Web address"
 }
