refactor farm pages

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -22,7 +22,7 @@
   "farmPage.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
   "farmPage.photoGallery": "Fotogalerie",
   "farmPage.reviews": "Říkají o nás",
-  "farmPage.switchToEditMode": "Editovat",
+  "farmPage.switchToAdminMode": "Farmář",
   "farmPage.switchToViewMode": "Náhled", 
   "farmPage.volunteers": "Dobrovolníci",
   "firstName": "Jméno",
@@ -38,7 +38,7 @@
   "myFarm": "Moje Farma",
   "password": "Heslo",
   "phoneNumber": "Telefonní číslo",
-  "pickupPoints": "Odběrová místa",
+  "pickupPoints": "Odběrová Místa",
   "postcode": "PSČ",
   "producing": "Produkujeme",
   "signIn": "Přihlásit se",
