--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -20,9 +20,9 @@
   "farmPage.csa": "CSA - Boxes",
   "farmPage.eshop": "Eshop",
   "farmPage.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
-  "farmPage.photoGallery": "Photo gallery",
+  "farmPage.photoGallery": "Photo Gallery",
   "farmPage.reviews": "They say about us",
-  "farmPage.switchToEditMode": "Edit",
+  "farmPage.switchToAdminMode": "Farmer",
   "farmPage.switchToViewMode": "View", 
   "farmPage.volunteers": "Volunteers",
   "firstName": "First name",
@@ -39,7 +39,7 @@
   "myFarm": "My Farm",
   "password": "Password",
   "phoneNumber": "Phone number",
-  "pickupPoints": "Pickup points",
+  "pickupPoints": "Pickup Points",
   "postcode": "Postcode",
   "producing": "Producing",
   "signIn": "Sign in",
