--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -22,7 +22,7 @@
   "farmPage.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
   "farmPage.photoGallery": "Fotogalerie",
   "farmPage.reviews": "Říkají o nás",
-  "farmPage.switchToAdminMode": "Farmář",
+  "farmPage.switchToAdminMode": "Editovat",
   "farmPage.switchToViewMode": "Náhled", 
   "farmPage.volunteers": "Dobrovolníci",
   "firstName": "Jméno",
