refactor, add AddRow

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,4 +1,8 @@
 {
+  "pickupPointsPage.editDelete": "Editovat/Smazat",
+  "pickupPointsPage.pickupDayPlaceholder": "Dle domluvy",
+  "pickupPointsPage.pickupDay": "Odběrový den",
+  "name": "Jméno",
   "orders": "Objednávky",
   "save": "Uložit",
   "address": "Adresa",
