implementing pick points CRUD

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -2,8 +2,9 @@
   "cancel": "Cancel",
   "pickupPointEditor.heading": "Pickup Point",
   "pickupPointsPage.editDelete": "Edit/Delete",
-  "pickupPointsPage.pickupDayPlaceholder": "Negotiable",
+  "pickupPointsPage.farmPickupDay": "By agreement.",
   "pickupPointsPage.pickupDay": "Pickup day",
+  "pickupPointsPage.pickupDayPlaceholder": "Eg. Weekly/Biweekly on Wednesday from 10am to 4pm. Or by agreement.",
   "name": "Name",
   "orders": "Orders",
   "save": "Save",
