--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -2,8 +2,9 @@
   "cancel": "Zrušit",
   "pickupPointEditor.heading": "Odběrový bod",
   "pickupPointsPage.editDelete": "Editovat/Smazat",
-  "pickupPointsPage.pickupDayPlaceholder": "Dle domluvy",
+  "pickupPointsPage.farmPickupDay": "Dle domluvy",
   "pickupPointsPage.pickupDay": "Odběrový den",
+  "pickupPointsPage.pickupDayPlaceholder": "Např. Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Nebo dle domluvy.",
   "name": "Jméno",
   "orders": "Objednávky",
   "save": "Uložit",
