implementing /farms page

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,4 +1,6 @@
 {
+  "farmsTable.deliversToHeading": "Odběrová místa v",
+  "farmsPage.heading": "Najdi Svou Farmu",
   "landingPage.showFarms": "Zobrazit Farmy",
   "exampleFarmAlert": "Tato farma není skutečná. Slouží pouze pro ilustraci při vývoji aplikace.",
   "delete": "Smazat",
@@ -18,8 +20,8 @@
   "contacts": "Kontakty",
   "continue": "Pokračovat",
   "createFarm": "Založit farmu",
-  "dairy": "Mléčné výrobky",
-  "eggs": "Vejce",
+  "productTypes.dairy": "Mléčné výrobky",
+  "productTypes.eggs": "Vejce",
   "email": "Email",
   "farm": "Farma",
   "farmForm.isPickupPoint": "Odběry ze dvora",
@@ -37,7 +39,7 @@
   "farmPage.switchToViewMode": "Náhled", 
   "farmPage.volunteers": "Dobrovolníci",
   "firstName": "Jméno",
-  "fruits": "Ovoce",
+  "productTypes.fruits": "Ovoce",
   "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
   "landingPage.heading": "Komunitou Podporované Zemědělství",
   "landingPage.subHeading": "Lokální produkty od lokálních farmářů",
@@ -46,13 +48,14 @@
   "landingPage.workInProgress": "Na stránce se pracuje",
   "landingPage.workInProgress2": "budeme vás informovat co je nového.",
   "lastName": "Příjmení",
-  "meat": "Maso",
+  "productTypes.meat": "Maso",
   "myFarm": "Moje Farma",
   "password": "Heslo",
   "phoneNumber": "Telefonní číslo",
   "pickupPoints": "Odběrová Místa",
   "postcode": "PSČ",
   "producing": "Produkujeme",
+  "farmsTable.producingHeading": "Produkuje",
   "signIn": "Přihlásit se",
   "signInPage.heading": "Přihlášení",
   "signInPage.invalidCredentials": "Neplatné přihlašovací údaje.",
@@ -67,6 +70,6 @@
   "somethingWentWrong": "Něco se porouchalo",
   "addressLine1": "Ulice a číslo popisné",
   "tryItLater": "Zkuste akci opakovat později.",
-  "vegetables": "Zelenina",
+  "productTypes.vegetables": "Zelenina",
   "webAddress": "Webová adresa"
 }
