--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,6 @@
 {
+  "farmsTable.deliversToHeading": "Pickup points in",
+  "farmsPage.heading": "Find Your Farm",
   "landingPage.showFarms": "Show Farms",
   "exampleFarmAlert": "This farm is not real. It is used for illustrative and development purposes.",
   "delete": "Delete",
@@ -18,8 +20,8 @@
   "contacts": "Contacts",
   "continue": "Continue",
   "createFarm": "Create farm",
-  "dairy": "Dairy",
-  "eggs": "Eggs",
+  "productTypes.dairy": "Dairy",
+  "productTypes.eggs": "Eggs",
   "email": "Email",
   "farm": "Farm",
   "farmForm.isPickupPoint": "Use farm as pickup point",
@@ -37,7 +39,7 @@
   "farmPage.switchToViewMode": "View", 
   "farmPage.volunteers": "Volunteers",
   "firstName": "First name",
-  "fruits": "Fruits",
+  "productTypes.fruits": "Fruits",
   "genericFailureMessage": "Something's wrong. Please try again later.",
   "landingPage.heading": "Community Supported Agriculture",
   "landingPage.subHeading": "Local products from local farmers",
@@ -46,13 +48,14 @@
   "landingPage.workInProgress": "Site is under construction",
   "landingPage.workInProgress2": "subscribe to be updated what's new.",
   "lastName": "Last name",
-  "meat": "Meat",
+  "productTypes.meat": "Meat",
   "myFarm": "My Farm",
   "password": "Password",
   "phoneNumber": "Phone number",
   "pickupPoints": "Pickup Points",
   "postcode": "Postcode",
   "producing": "Producing",
+  "farmsTable.producingHeading": "Producing",
   "signIn": "Sign in",
   "signInPage.heading": "Sign in",
   "signInPage.invalidCredentials": "Invalid credentials.",
@@ -67,6 +70,6 @@
   "somethingWentWrong": "Something went wrong",
   "addressLine1": "Street and house number",
   "tryItLater": "Try it again later.",
-  "vegetables": "Vegetables",
+  "productTypes.vegetables": "Vegetables",
   "webAddress": "Web address"
 }
