add farm filter

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -2,7 +2,7 @@
   "farmsTable.deliversToHeading": "Odběrová místa v",
   "farmsPage.heading": "Najdi Svou Farmu",
   "landingPage.showFarms": "Zobrazit Farmy",
-  "exampleFarmAlert": "Tato farma není skutečná. Slouží pouze pro ilustraci při vývoji aplikace.",
+  "exampleFarmAlert": "Tato farma není skutečná. Slouží pro ilustraci při vývoji aplikace.",
   "delete": "Smazat",
   "areYouSure": "Jste si jistý?",
   "cancel": "Zrušit",
