implement CSA page

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,8 +1,19 @@
 {
+  "csaPage.about": "Kominitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit spotřebitele přímo s producentem (farmářem). Jeden ze způsobů, kterým se toho snaží dosáhnout, je tak zvaný \"odběr bedýnek\" (podílů). Bedýnky se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě a obecně platí, že čím více bedýnek si předplatíte, tím nižší cena bedýnky.",
+  "csaPage.boxName": "Jméno \"bedýnky\"",
+  "pc": "ks",
+  "priceList": "Ceník",
+  "option": "Možnost",
+  "boxEditor.numberOfBoxes": "Počet bedýnek",
+  "boxEditor.pricePerBox": "Cena za kus (Kč)",
+  "boxEditor.namePlaceholder": "Např. Velká zeleninová",
+  "csaPage.boxContentPlaceholder": "Brambory, Cibule, Mrkve, Řepa, Salát...",
+  "csaPage.boxContentHeading": "(Možný) obsah",
+  "boxEditor.heading": "Bedýnka",
   "farmsTable.deliversToHeading": "Odběrová místa v",
   "farmsPage.heading": "Najdi Svou Farmu",
   "landingPage.showFarms": "Zobrazit Farmy",
-  "exampleFarmAlert": "Tato farma není skutečná. Slouží pro ilustraci při vývoji aplikace.",
+  "exampleFarmAlert": "Tato farma je pouze ilustrativní.",
   "delete": "Smazat",
   "areYouSure": "Jste si jistý?",
   "cancel": "Zrušit",
