--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,8 +1,19 @@
 {
+  "csaPage.about": "Community Supported Agriculute is a concept, which is among other things trying to connect a consumer directly with the producer (farmer). One method to achieve it, is to subscribe to farm's boxes of products (shares). Most common is a weekly subscription with handover on agreed pickup point. In general the more boxes you prepay the lower the price per box.",
+  "pc": "pc",
+  "csaPage.boxName": "\"Box\" name",
+  "priceList": "Price list",
+  "option": "Option",
+  "boxEditor.numberOfBoxes": "Number of boxes",
+  "boxEditor.pricePerBox": "Price per box ($)",
+  "boxEditor.namePlaceholder": "Eg. Vegetables for 4",
+  "csaPage.boxContentPlaceholder": "Beetroot, Carrots, Lettuce, Potatoes, Onions...",
+  "csaPage.boxContentHeading": "(Possible) content",
+  "boxEditor.heading": "Box",
   "farmsTable.deliversToHeading": "Pickup points in",
   "farmsPage.heading": "Find Your Farm",
   "landingPage.showFarms": "Show Farms",
-  "exampleFarmAlert": "This farm is not real. It is used for illustrative and development purposes.",
+  "exampleFarmAlert": "This farm is for illustrative purposes only.",
   "delete": "Delete",
   "areYouSure": "Are you sure?",
   "cancel": "Cancel",
