--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,5 +1,5 @@
 {
-  "csaPage.about": "Kominitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit spotřebitele přímo s producentem (farmářem). Jeden ze způsobů, kterým se toho snaží dosáhnout, je tak zvaný \"odběr bedýnek\" (podílů). Bedýnky se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě a obecně platí, že čím více bedýnek si předplatíte, tím nižší cena bedýnky.",
+  "csaPage.about": "Komunitou Podporované Zemědělství je koncept, který se mimo jiné snaží propojit spotřebitele přímo s producentem (farmářem). Jeden ze způsobů, kterým se toho snaží dosáhnout, je tak zvaný \"odběr bedýnek\" (podílů). Bedýnky se nejčastěji odebírají jednou za týden, na předem domluveném odběrovém místě a obecně platí, že čím více bedýnek si předplatíte, tím nižší cena bedýnky.",
   "csaPage.boxName": "Jméno \"bedýnky\"",
   "pc": "ks",
   "priceList": "Ceník",
@@ -11,8 +11,7 @@
   "csaPage.boxContentHeading": "(Možný) obsah",
   "boxEditor.heading": "Bedýnka",
   "farmsTable.deliversToHeading": "Odběrová místa v",
-  "farmsPage.heading": "Najdi Svou Farmu",
-  "landingPage.showFarms": "Zobrazit Farmy",
+  "farmsPage.heading": "Najdi Farmu",
   "exampleFarmAlert": "Tato farma je pouze ilustrativní.",
   "delete": "Smazat",
   "areYouSure": "Jste si jistý?",
@@ -30,7 +29,7 @@
   "city": "Město",
   "contacts": "Kontakty",
   "continue": "Pokračovat",
-  "createFarm": "Založit farmu",
+  "createFarm": "Založ Farmu",
   "productTypes.dairy": "Mléčné výrobky",
   "productTypes.eggs": "Vejce",
   "email": "Email",
