--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "csaPage.about": "Community Supported Agriculute is a concept, which is among other things trying to connect a consumer directly with the producer (farmer). One method to achieve it, is to subscribe to farm's boxes of products (shares). Most common is a weekly subscription with handover on agreed pickup point. In general the more boxes you prepay the lower the price per box.",
+  "csaPage.about": "Community Supported Agriculute is a concept, which is among other things trying to connect a consumer directly with the producer (farmer). One method to achieve this, is to subscribe to boxes of products (shares). Most common is a weekly subscription with handover on agreed pickup point. In general the more boxes you prepay the lower the price per box.",
   "pc": "pc",
   "csaPage.boxName": "\"Box\" name",
   "priceList": "Price list",
@@ -11,8 +11,7 @@
   "csaPage.boxContentHeading": "(Possible) content",
   "boxEditor.heading": "Box",
   "farmsTable.deliversToHeading": "Pickup points in",
-  "farmsPage.heading": "Find Your Farm",
-  "landingPage.showFarms": "Show Farms",
+  "farmsPage.heading": "Find Farm",
   "exampleFarmAlert": "This farm is for illustrative purposes only.",
   "delete": "Delete",
   "areYouSure": "Are you sure?",
@@ -30,7 +29,7 @@
   "city": "City",
   "contacts": "Contacts",
   "continue": "Continue",
-  "createFarm": "Create farm",
+  "createFarm": "Create Farm",
   "productTypes.dairy": "Dairy",
   "productTypes.eggs": "Eggs",
   "email": "Email",
